--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,12 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
+       <aside id="sidebar">
+
+          <a href="https://[Your GitHub Username].github.io/repository0name/" class="button">Home</a>
+          <a href="teaching" class="button">Teaching</a>
+          <a href="projects" class="button">Projects</a>
+  
         {% if site.show_downloads %}
           <div class="downloads">
             <span>Downloads:</span>
