--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 
     <aside id="sidebar">
 
-          <a href="https://Aminta Quintero-Jackson.github.io/repository0name/" class="button">Home</a>
+          <a href="https://JammintaCQ.github.io/repository0name/" class="button">Home</a>
           <a href="teaching" class="button">Teaching</a>
           <a href="projects" class="button">Projects</a>
 
