--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
     <aside id="sidebar">
 
           <a href="https://JammintaCQ.github.io/repository0name/" class="button">Home</a>
-          <a href="teaching" class="button">Teaching</a>
-          <a href="projects" class="button">Projects</a>
+          <a href="/teaching" class="button">Teaching</a>
+          <a href="/projects" class="button">Projects</a>
     </aside>
       
     <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
