Merlot Update default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,11 +53,21 @@
 
 
       <span class="banner-fix"></span>
+        <div id="sidebar">
+  <nav class="menu">
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/contact">Contact</a></li>
+    </ul>
+  </nav>
+</div>
 
-
-      <section id="main_content">
+      <div id="content-wrapper">
+  <section id="main_content">
         {{ content }}
       </section>
+      </div>
 
       <footer>
         <span class="ribbon-outer">
