--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,11 @@
         </section>
 
         <aside id="sidebar">
+             <a href="https://[Your GitHub Username].github.io/repository0name/" class="button">Home</a>
+          <a href="teaching" class="button">Teaching</a>
+          <a href="projects" class="button">Projects</a>
+          
+          
           {% if site.show_downloads %}
             <a href="{{ site.github.zip_url }}" class="button">
               <small>Download</small>
