--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,8 +42,8 @@
              <a href="https://[Your GitHub Username].github.io/repository0name/" class="button">Home</a>
           <a href="teaching" class="button">Teaching</a>
           <a href="projects" class="button">Projects</a>
-          
-          
+        </aside>
+                    
           {% if site.show_downloads %}
             <a href="{{ site.github.zip_url }}" class="button">
               <small>Download</small>
