--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
 
         <aside id="sidebar">
              <a href="https://[Your GitHub Username].github.io/repository0name/" class="button">Home</a>
-          <a href="teaching" class="button">Teaching</a>
+          <a href="Volunteer" class="button">Volunteer</a>
           <a href="projects" class="button">Projects</a>
         </aside>
                     
