--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
         </section>
 
     <aside id="sidebar">
-       <a href="https://jammintacq.github.io/dig6800-fall24/" class="button">Home</a>
+       <a href="https://jammintacq.github.io/dig6800-fall24" class="button">Home</a>
         <a href="https://jammintacq.github.io/dig6800-fall24/volunteer" class="button">Volunteer</a>
         <a href="https://jammintacq.github.io/dig6800-fall24/projects" class="button">Projects</a>
     </aside>
