--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,8 @@
 
     <aside id="sidebar">
        <a href="https://jammintacq.github.io/dig6800-fall24/" class="button">Home</a>
-        <a href="volunteer.html" class="button">Volunteer</a>
-        <a href="/projects.html" class="button">Projects</a>
+        <a href="https://jammintacq.github.io/dig6800-fall24/volunteer.md" class="button">Volunteer</a>
+        <a href="https://jammintacq.github.io/dig6800-fall24/projects.md" class="button">Projects</a>
     </aside>
                     
           {% if site.show_downloads %}
