--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,11 +38,11 @@
           {{ content }}
         </section>
 
-   <aside id="sidebar">
-        <a href="{{ site.baseurl }}/" class="button">Home</a>
-        <a href="{{ site.baseurl }}/Volunteer" class="button">Volunteer</a>
-        <a href="{{ site.baseurl }}/projects" class="button">Projects</a>
-  </aside>
+       <aside id="sidebar">
+          <a href="https://jammintacq.github.io/dig6800-fall24/" class="button">Home</a>
+          <a href="https://jammintacq.github.io/dig6800-fall24/Volunteer/" class="button">Volunteer</a>
+          <a href="https://jammintacq.github.io/dig6800-fall24/projects/" class="button">Projects</a>
+        </aside>
                     
           {% if site.show_downloads %}
             <a href="{{ site.github.zip_url }}" class="button">
